# jobsearchagent

./: .env.example  .gitignore  CLAUDE.md  PROFILE.template.md  pyproject.toml
src/jobsearchagent/: cli.py  config.py  db.py  models.py  pipeline.py
src/jobsearchagent/sources/: __init__.py  vdab.py
tests/: test_models.py  test_pipeline.py  test_vdab.py
