[project]
name = "jobsearchagent"
version = "0.1.0"
description = "Personal career discovery agent — time-aware job ingestion and scoring"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
jobsearch = "jobsearchagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobsearchagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
